<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roger.exercicio4.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgFilme"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="-7dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noimg" />

        <EditText
            android:id="@+id/edtFilme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/mainActivityTitulo"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFilme" />

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/mainActivityTextCodigo"
            android:inputType="text"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFilme" />

        <EditText
            android:id="@+id/edtAno"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/mainActivityTextAno"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="@+id/edtCodigo"
            app:layout_constraintRight_toLeftOf="@+id/edtDataLancamento"
            app:layout_constraintTop_toBottomOf="@+id/edtCodigo"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edtDataLancamento"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/mainActivityEditDataLancamento"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/edtAno"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCodigo"
            app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBuscaFilme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/imgFilme"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <RatingBar
        android:id="@+id/ratBarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTextAvalie"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/mainActivityTextAvalie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mainActivityTextAvalie"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainActivitySpinnerDiretores" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/ratBarra"
        app:layout_constraintRight_toLeftOf="@+id/ratBarra"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTextAvalie"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/ratBarra"
        app:layout_constraintLeft_toRightOf="@+id/ratBarra"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTextAvalie"
        app:srcCompat="@android:drawable/ic_media_next" />

    <Spinner
        android:id="@+id/mainActivitySpinnerDiretores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAno"
        app:layout_constraintLeft_toRightOf="@+id/mainActivityTextDiretor"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/mainActivityTextDiretor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainActivityTextDiretor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAno" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
